--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div id="ptop">
+        <div class="elem">
+            <h2>Score</h2>
+            <div class="box" id="score">0</div>
+        </div>
+
+        <div class="elem">
+            <h2>Timer</h2>
+            <div class="box" id="timer">10</div>
+        </div>
+    </div>
     <div id="board"></div>
     <script src="./memory.js"></script>
     
